--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Thanmai8520.github.io/letter1",
+  "homepage": "https://Thanmai8520.github.io/letter",
   "name": "my-person",
   "version": "0.1.0",
   "private": true,
